fix: Fix contact form overflowing

--- a/src/screens/Contact/styles.css
+++ b/src/screens/Contact/styles.css
@@ -1,5 +1,6 @@
 .contact-container {
   width: 40vw;
+  max-width: 600px;
 }
 
 .input-field {
@@ -11,17 +12,12 @@
   font-size: 16px;
   color: rgb(200, 200, 200);
   outline: none;
+  box-sizing: border-box;
 }
 
-.contact-form ul {
+.contact-form {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-gap: 10px 10px;
-  padding: 0;
-}
-
-.form-grid-full {
-  grid-column: span 2;
 }
 
 .form-grid-submit {
@@ -29,18 +25,18 @@
   grid-column-end: 3;
 }
 
-.contact-form li {
+.form-grid-item {
   padding: 0;
-  margin: 0;
-  list-style: none;
-  overflow: hidden;
-  display: block;
-  clear: both;
+  margin: 5px;
   position: relative;
+  grid-column: span 2;
+}
+
+.form-grid-half {
+  grid-column: span 1;
 }
 
 .contact-form textarea {
-  width: 100%;
   padding: 20px;
   min-height: 150px;
   font-family: Arial;
@@ -62,10 +58,13 @@
 }
 
 .submit-button {
+  grid-column-start: 2;
+  grid-column-end: 3;
   cursor: pointer;
   width: fit-content;
   height: 40px;
   margin-left: auto;
+  justify-self: end;
   display: flex;
   align-items: center;
   padding-left: 10px;
